--- a/2-1/index.html
+++ b/2-1/index.html
@@ -18,8 +18,7 @@
 <body>
     <header>
         <span id="appname">MY TO DO LIST</span>
-        <input id="input" placeholder="Type a remind...." type="text" />
-        <button id="add">Add</button>
+        <input id="input" placeholder="Type a remind...." type="text" /><button id="add">Add</button>
     </header>
 
     <div id="list">
